# Ui_CrewAi_Text_Processing_Backend

./: .gitignore  README.md  agents.py  api.py  crew.py  job_manager.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
